added the code part two

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/9d9c6a0342.js" crossorigin="anonymous"></script>
 </head>
 <body class="open-sans-normal">
-    <header class="head secondary-bg hide">
+    <header class="head secondary-bg">
         <nav>
             <h2 class="nav-title">Ja<span class="text-primary">c</span>k</h2>
             <ul>
